@@ -1,6 +1,6 @@
 inThisBuild(List(
-  scalaVersion := "2.12.20",
-  crossScalaVersions := Seq("2.12.20", "2.13.16", "3.3.6"),
+  scalaVersion := "3.3.6",
+  crossScalaVersions := Seq("2.13.16", "3.3.6" ),
   organization := "io.github.pashashiz",
   homepage := Some(url("https://github.com/pashashiz")),
   licenses := List("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0")),
@@ -25,7 +25,7 @@ lazy val root = (project in file("."))
   .settings(
     name := "spark-encoders",
     libraryDependencies ++= Seq(
-      ("org.apache.spark" %% "spark-sql" % "3.5.5" % Provided).cross(CrossVersion.for3Use2_13),
+      ("org.apache.spark" %% "spark-sql" % "4.0.0" % Provided).cross(CrossVersion.for3Use2_13),
       "org.scalatest" %% "scalatest" % "3.2.19" % Test exclude (
         "org.scala-lang.modules",
         "scala-xml_3")),
@@ -35,4 +35,28 @@ lazy val root = (project in file("."))
         case _            => Seq.empty
       }),
     Test / parallelExecution := false,
+    Test / fork := true,
+    Test / javaOptions ++= Seq(
+      "-XX:+IgnoreUnrecognizedVMOptions",
+      "--add-modules=jdk.incubator.vector",
+
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+
+      // same two system properties Spark sets
+      "-Djdk.reflect.useDirectMethodHandle=false",
+      "-Dio.netty.tryReflectionSetAccessible=true"
+    ),
     providedAsRunnable)
